--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "debug": "^2.1.0",
     "fs-extra": "^0.12.0",
+    "fstream": "^1.0.3",
+    "tar": "^1.0.3",
     "when": "^3.6.3"
   }
 }
