--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs-extra": "^0.12.0",
     "fstream": "^1.0.3",
     "tar": "^1.0.3",
-    "when": "^3.6.3"
+    "when": "^3.6.3",
+    "lodash": "~3.1.0"
   }
 }
